------------------------------------------------------------------------
r2122 | gaser | 2022-10-18 17:26:11

Changed paths:
 M CHANGES.txt
 M doc/css/main.css
 M doc/index.html


Changed: Updated CAT12 HTML documentation.

------------------------------------------------------------------------
r2121 | gaser | 2022-10-18 15:34:39

Changed paths:
 M CHANGES.txt
 M Makefile
 M doc/index.html


Changed: Updated CAT12 HTML documentation.

------------------------------------------------------------------------
r2120 | gaser | 2022-10-18 12:44:04

Changed paths:
 M CHANGES.txt
 M doc/index.html


Changed: Updated CAT12 HTML documentation.

------------------------------------------------------------------------
r2118 | gaser | 2022-10-18 11:04:54

Changed paths:
 M .gitattributes
 M CHANGES.txt
 M cat_conf_ROI.m
 M cat_conf_stools.m
 M cat_defaults.m
 M cat_surf_results.m
 M doc/css/main.css
 M doc/index.html
 M templates_MNI152NLin2009cAsym/thalamic_nuclei.nii


Changed: Added support for RGB overlay to cat_surf_results.m using 'rgb' option.
Changed: Moved option for surface resample size to expert mode.
Changed: Updated information about new thalamic nuclei atlas.
Changed: Updated CAT12 HTML documentation.

------------------------------------------------------------------------
r2117 | rdahnke | 2022-10-17 17:05:15

Changed paths:
 M CHANGES.txt
 M cat_io_cmd.m


Fixed:  Corrected output style setting in cat_io_cmd.
------------------------------------------------------------------------
r2116 | gaser | 2022-10-17 14:25:56

Changed paths:
 M CHANGES.txt
 M cat_conf_ROI.m
 M cat_defaults.m
A  doc/cat.html
A  doc/css/fontawesome-all.min.css
A  doc/css/main.css
A  doc/disclaimer.html
A  doc/images/CAT.png
A  doc/images/CAT_Error_Report.jpg
A  doc/images/CAT_PBT_for_SPM.png
A  doc/images/CAT_Report.jpg
A  doc/images/CAT_surf_atlas_DKT40.png
A  doc/images/CAT_surf_atlas_Desikan-Killiany.png
A  doc/images/CAT_surf_atlas_Destrieux.png